# opencl

./: README.md
demo/opencl2/: CMakeLists.txt  test2.cpp
demo/opencl_01/: CMakeLists.txt  demo.cpp
